packages/related/test/tests/test_plan_execution/logs/snapshots/node/jsenv_tests_output_error_in_timeout.txt
------------ 1 execution to run -------------
node (node_worker_thread@<mock>)
---------------------------------------------

✖ error_in_timeout.spec.js [<mock>] 1/1 (all failed)
--------------- error ----------------
1 | await new Promise(() => {
2 |   setTimeout(() => {
3 |     throw new Error("here");
              ^
Error: here
    at Timeout._onTimeout (<mock>/error_in_timeout.spec.js:3:11)
--------------------------------------

------------------ summary ------------------
1 execution: all failed
duration: <mock>
---------------------------------------------